hphp/hack/test/typecheck/sketchy_null_hiding_under_unresolved.php.exp
File "sketchy_null_hiding_under_unresolved.php", line 12, characters 13-14:
You are using a sketchy null check ...
Use $c !== null instead (Typing[4088])
